@@ -3,6 +3,9 @@
 # $Header: $
 
   01 Feb 2011; Nikoli <nikoli@lavabit.com> mplayer-uau-9999.ebuild:
+  upstream removed internal tremor and libmpeg2
+
+  01 Feb 2011; Nikoli <nikoli@lavabit.com> mplayer-uau-9999.ebuild:
   upstream removed vidix, zoran, some docs and internal libfaad2
 
   30 Jan 2011; Nikoli <nikoli@lavabit.com>
